# HELIX

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cuda-smoke.yml  docs.yml  numerical-baseline.yml  release-drafter.yml  release.yml  repository-health.yml
bindings/python/: helix_bindings.cpp
cmake/: HELIXConfig.cmake.in  HelixVersion.cmake  helix_version.cmake
doc/: Doxyfile.in  Makefile
doc/source/: conf.py  glossary.rst  index.rst
doc/source/_static/css/: style.css
doc/source/_static/js/: version-switcher.js
doc/source/api-reference/: cpp.rst  generated.rst  index.rst  python.rst
doc/source/architecture/: index.rst
doc/source/core-concepts/: baselines.rst  gpu-execution.rst  heom.rst  index.rst  runtime-model.rst
doc/source/development/: benchmarking.rst  build-and-test.rst  documentation.rst  index.rst
doc/source/getting-started/: index.rst  installation.rst  quickstart.rst  troubleshooting.rst
doc/source/release/: index.rst
doc/source/tutorials/: baseline-run.rst  cpp-library-example.rst  index.rst
docs/: github-setup.md
examples/: outputEnergy.txt
examples/benchmark/legacy_spin_glass/: README.md  run.sh
examples/benchmark/legacy_spin_glass/reference/: helix_benchmark.jsonl  helix_benchmark_summary.md
examples/benchmark/legacy_spin_glass/reference/nsight/: 20260513T130852Z-legacy-spin-glass-systems.nsys-rep
examples/benchmark/legacy_spin_glass/reference/test_results/: benchmark_ctest.txt  full_baseline_energy_compare.txt  nsight_tool_status.txt  ordinary_correctness_ctest.txt  python_smoke_status.txt  quick_baseline_energy_compare.txt  validation_summary.md
examples/cpp/: legacy_spin_glass.cpp
include/helix/: examples.h  fwd.h  helix.h  types.h  version.h
scripts/: check_no_generated_outputs.sh  package_release.sh  research_resume.sh  run_legacy_spin_glass_before_after_benchmark.sh  run_legacy_spin_glass_t11_ablation_benchmark.sh  stage_docs_site.py  verify_examples.sh
src/: DefineParameters.h  Headers.h  HelixVersion.h.in  Initialize.cu  Initialize.h  InitializeDetail.h  Liouville.cu  Liouville.h  Main.cu  MatrixUtil.cu  MatrixUtil.h  Matrixes.cu  Matrixes.h  Parameters.cu  Parameters.h  TypeDef.h  cli_compatibility.cu  cli_compatibility.h  complex_operators.h  cuda_sparse_backend_plan.cu  cuda_sparse_backend_plan.h  cuda_types.h  hEquationNew.vcxproj  helix.cpp  initialize.cu  initialize.h  initialize_detail.h  legacy_compile_options.h  liouville.cu  liouville.h  main.cu  matrix_storage.cu  matrix_storage.h  matrix_util.cu  matrix_util.h  operators.h  parameters.cu  parameters.h
src/Psd/: Eigval.cu  Eigval.h  Psd.cu  Psd.h
src/psd/: eigenvalues.cu  eigenvalues.h  psd.cu  psd.h
tests/: InitializeDetailTests.cu  README.md
tests/benchmark/: legacy_spin_glass_benchmark.cu  legacy_spin_glass_graph_spike.cu
tests/cuda/: CusparseWrapperTests.cu  TransposeTests.cu  cusparse_wrapper_tests.cu  develop_stream_ownership_microtests.cu  diagonal_hamiltonian_commutator_tests.cu  event_based_sync_microtests.cu  transpose_tests.cu
tests/integration/: cli_compatibility_wrapper.cmake  ctest_label_resource_lock_review.cmake  external_consumer_smoke.cmake  helix_smoke_integration.cmake  python_binding_smoke.cmake
tests/numerical/: HeomLifecycleContractTests.cu  OneStepEvolutionTests.cu  SparseDrhoReferenceTests.cu  heom_lifecycle_contract_tests.cu  one_step_evolution_tests.cu  public_lifecycle_context_tests.cu  public_result_shape_tests.cu  public_solver_spin_glass_tests.cu  sparse_drho_reference_tests.cu
tests/planned/: expected_fail_gate.cmake
tests/research/: test_bootstrap_smoke.sh
tests/sanitizer/: run_cuda_sanitizer.cmake
tests/support/: Assert.h  EnergyTraceComparator.h  EnergyTraceCompareMain.cpp  LegacyHeomRun.h  NumericalInvariants.h  TempDir.h  Tolerance.h  assert.h  benchmark_artifacts.h  benchmark_schema.h  energy_trace_comparator.h  energy_trace_compare_main.cpp  legacy_heom_run.h  numerical_invariants.h  temp_dir.h  tolerance.h
tests/unit/: EnergyTraceComparatorTests.cpp  InitializeDetailTests.cu  ParameterDefaultTests.cu  PsdReferenceTests.cu  api_schema_validation_tests.cpp  benchmark_artifact_hygiene_tests.cpp  benchmark_schema_validation_tests.cpp  cli_compatibility_tests.cpp  energy_observable_tests.cpp  energy_trace_comparator_tests.cpp  initialize_detail_tests.cu  parameter_default_tests.cu  psd_reference_tests.cu  public_header_compile_tests.cpp
