[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-docs"
version = "0.0.4"
description = "Documentation environment for HELIX."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Ye Jun", email = "yjmaxpayne@hotmail.com"},
]
dependencies = []

[project.optional-dependencies]
docs = [
  "sphinx>=8.2",
  "furo>=2025.7.19",
  "breathe>=4.35",
  "sphinx-copybutton>=0.5",
  "myst-parser[linkify]>=4.0",
  "sphinxcontrib-mermaid>=1.0",
  "dunamai>=1.19",
]
release = [
  "commitizen>=4.15.1",
  "dunamai>=1.19",
]
dev = [
  "pre-commit>=4.5.1",
  "pybind11>=2.13",
  "ruff==0.15.11",
]

[tool.setuptools]
packages = []
py-modules = []

[tool.helix.docs]
system-dependencies = ["doxygen"]
build-command = 'make -C doc html SPHINXOPTS="-W --keep-going"'
python-install-command = 'python -m pip install -e ".[docs]"'

[tool.helix.version]
authority = "git tag"
tag-format = "vMAJOR.MINOR.PATCH"
cmake-override = "HELIX_RELEASE_VERSION"
runtime-command = "helix --version"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag_format = "v$version"
version_scheme = "semver"
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = false
changelog_incremental = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "build",
  "dist",
  "doc/build",
  "doc/_doxygen",
  "helix_docs.egg-info",
]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "RUF",
  "SIM",
  "UP",
]

[tool.ruff.format]
line-ending = "lf"
